example data getting to controllers, template almost correct (#11)
